[project]
name = "langgraph-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=26.3.1",
    "pinecone>=6.0.0",
    "grandalf>=0.8",
    "isort>=8.0.1",
    "langchain>=1.3.0",
    "langchain-openai>=1.2.1",
    "langchain-tavily>=0.2.18",
    "langfuse>=4.6.1",
    "langgraph>=1.2.0",
    "langsmith[openai-agents]>=0.8.3",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "tavily>=1.1.0",
]
